# embedded-ui

./: .gitignore  Cargo.toml  README.md  make-icons.js  rustc-ice-2024-07-23T23_55_54-52660.txt  rustc-ice-2024-07-23T23_55_54-52661.txt
examples/: sandbox.rs
src/: action.rs  align.rs  app.rs  axis.rs  block.rs  color.rs  debug.rs  el.rs  event.rs  focus.rs  font.rs  helpers.rs  layer.rs  layout.rs  lazy.rs  lib.rs  linear.rs  log.rs  overlay.rs  padding.rs  palette.rs  render.rs  simulator.rs  size.rs  state.rs  style.rs  stylesheet.rs  text.rs  theme.rs  ui.rs  value.rs  widget.rs
src/icons/: Icons5-20240523-222701.piskel  icons5.rs  icons6.rs  icons7.rs  icons8.rs  mod.rs
src/icons/mono/: icons5x7.rs  mod.rs
src/kit/: bar.rs  button.rs  checkbox.rs  divider.rs  focus_input.rs  icon.rs  knob.rs  linear.rs  mod.rs  popup.rs  roller.rs  select.rs  slider.rs  text.rs  virtual_keyboard.rs
src/style/: monochrome.rs
src/widgets/: bar.rs  button.rs  checkbox.rs  container.rs  divider.rs  focus_input.rs  icon.rs  knob.rs  linear.rs  mod.rs  scrollable.rs  select.rs  slider.rs  text.rs  virtual_keyboard.rs
