[package]
name = "embedded-ui"
version = "0.0.0"
edition = "2021"
authors = ["hazer-hazer"]
description = "Simple UI framework created for embedded systems"
keywords = ["embedded", "ui", "gui", "graphics", "no-std"]
categories = ["embedded", "gui", "graphics", "no-std"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
embedded-text = "0.7.1"
defmt = { version = "0.3", optional = true }
embedded-canvas = "0.3.1"

[dev-dependencies]
embedded-graphics-simulator = "0.6.0"

[features]
default = []

std = []
defmt = ["dep:defmt"]
